# eeduro-platform

./: .gitignore  CMakeLists.txt  README.md  linaro.cmake
delta/: CMakeLists.txt  Calibration.cpp  Calibration.hpp  delta.cpp
delta/control/: CMakeLists.txt  ControlSystem.cpp  ControlSystem.hpp  DirectKinematic.cpp  DirectKinematic.hpp  Inertia.cpp  Inertia.hpp  Jacobi.cpp  Jacobi.hpp  Jacobian.cpp  Jacobian.hpp  Kinematic.cpp  Kinematic.hpp  Kinematics.hpp  LogScope.hpp  MotorModel.cpp  MotorModel.hpp  NumericalJacobian.hpp  PathPlanner.cpp  PathPlanner.hpp  constants.hpp  types.hpp
delta/safety/: CMakeLists.txt  DeltaSafetyProperties.cpp  DeltaSafetyProperties.hpp
delta/sequencer/: CMakeLists.txt  CalibrateSequence.cpp  CalibrateSequence.hpp  DetectSequence.cpp  DetectSequence.hpp  MainSequence.cpp  MainSequence.hpp  MoveBlockSequence.cpp  MoveBlockSequence.hpp  SortSequence.cpp  SortSequence.hpp
doc/: delta_control_system.odg  delta_safety_levels.ods
eeduro/: CMakeLists.txt
eeduro/include/eeduro/: Board.hpp  Input.hpp  Latch.hpp  Output.hpp
eeduro/src/: Board.cpp
includes/eeduro/: eeduro.hpp
includes/eeduro/control/: ControlSystem.hpp
includes/eeduro/hal/: Board.hpp  Input.hpp  Output.hpp
src/: CMakeLists.txt  eeduro.cpp
src/control/: CMakeLists.txt  ControlSystem.cpp
src/hal/: Board.cpp  CMakeLists.txt
test/: CMakeLists.txt  Jacobian.hpp  Kinematic.hpp  button.cpp  encoder.cpp  jacobi.cpp  led.cpp  magnet.cpp  voltage.cpp
util/: CMakeLists.txt  ctrl.cpp
