macro(add_eeduro_sources)
    file(RELATIVE_PATH _relPath "${CMAKE_SOURCE_DIR}/src" "${CMAKE_CURRENT_SOURCE_DIR}")
    foreach(_src ${ARGN})
        if(_relPath)
            list(APPEND EEDURO_SRCS "${_relPath}/${_src}")
        else()
            list(APPEND EEDURO_SRCS "${_src}")
        endif()
    endforeach()
    if(_relPath)
        # propagate EEDURO_SRCS to parent directory
        set(EEDURO_SRCS ${EEDURO_SRCS} PARENT_SCOPE)
    endif()
endmacro()

add_subdirectory(control)
add_subdirectory(safety)
add_subdirectory(sequencer)
add_subdirectory(hal)

# Main executable
add_eeduro_sources(eeduro.cpp)
add_executable(eeduro ${EEDURO_SRCS})
target_link_libraries(eeduro eeros)
install(TARGETS eeduro RUNTIME DESTINATION bin)
